ch4/traefik-hsts-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-hsts-middleware
spec:
  redirectScheme:
    scheme: https
    permanent: true
